version_files/05/client_deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: k8-mini-app-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8-mini-app-client
  template:
    metadata:
      labels:
        app: k8-mini-app-client
    spec:
      containers:
        - name: client
          image: # your image here
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http-client
---
# Client service
apiVersion: v1
kind: Service
metadata:
  name: k8-mini-app-client-service
spec:
  type: NodePort
  selector:
    app: k8-mini-app-client
  ports:
    - port: 80
      targetPort: http-client
