version_files/05/postgres.yaml
#### This yaml file is treated as 3 separate yaml files (separated by ---) ####

## Postgres Service
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: postgres
---
### Postgres deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          # See https://hub.docker.com/_/postgres/ for other versions of postgres that you can use
          image: postgres:16.1
          ports:
            - containerPort: 5432
