version_files/05/server_deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: k8-mini-app-server
spec:
  replicas: 2 # This should be at least 2 if you want to see the /pod route working
  selector:
    matchLabels:
      app: k8-mini-app-server
  template:
    metadata:
      labels:
        app: k8-mini-app-server
    spec:
      containers:
        - name: server
          image: # your image here
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http-server
---
# Server service
apiVersion: v1
kind: Service
metadata:
  name: k8-mini-app-server-service
spec:
  type: ClusterIP # This is the default type so this line is technically not needed
  selector:
    app: k8-mini-app-server
  ports:
    - port: 80
      targetPort: http-server
